# Ferrum

./: CMakeLists.txt  README.es.md  README.md
.github/workflows/: release.yml
docs/: SPEC.es.md  SPEC.md  index.html
include/ferrum/: Parser.h
src/borrow/: BorrowChecker.cpp
src/codegen/: Codegen.cpp
src/driver/: main.cpp
src/lexer/: Lexer.cpp
src/parser/: Parser.cpp
src/sema/: TypeChecker.cpp
